[package]
name = "nonogram"
version = "0.3.0"
description = "Nonogram generation and solution package"
authors = ["Joe Grosspietsch <joe.grosspietsch@gmail.com>"]
documentation = "https://docs.rs/nonogram"
repository = "https://github.com/jgrosspietsch/nonogram-rs"
license = "MIT"
edition = "2018"

[dependencies]
crc = "^1.0.0"
ndarray = { version= "0.12.1", features = ["serde-1"] }
ndarray-rand = "0.9.0"
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
